<resources>
    <string name="app_name">HumanSafety</string>
    <string name="logoString_name">Human Safety</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_other">Other</string>
    <string name="don_t_have_a_account">Don\'t have a account.</string>
    <string name="don_account">Don\'t have a account.please SignUp Here.</string>
    <string name="login">login</string>
    <string name="signup_now">Signup now</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="about_text">
        <b>Md. Salahuddin</b>\n
        <i>Department of CSE</i>\n
        <i>Daffodil International University</i>\n
        <i>salah15-4670@diu.edu.bd</i>\n\n\n

        <b>Md. Ahsan Habib</b>\n
        <i>Department of CSE</i>\n
        <i>Daffodil International University</i>\n
        <i>ahsan15-5355@diu.edu.bd</i>

    </string>
    <string name="help_text">
        1. At first you have to registration into our app for login.\n\n
        2. During registration you have to must provide your guardian information.\n\n
        3. Guardian phone number must be a valid and running phone number.\n\n
        4. press power button in emmergency moment for getting help.\n\n
        5. To get help always enable your switch button.\n\n
        6. It will keep running your app in background.\n\n
        7. Stay with us.Give feedback and share app.
    </string>
    <string name="DhakaThanaContract">

        <b>Adabar\n</b>
        <i>Phone: 02- 9133265, 02- 9120288\n\n</i>

        <b>Badda\n</b>
        <i>Phone: 02-9882652\n\n</i>

        <b>Bangshal\n</b>
        <i>Phone: Phone: 02-9565700\n\n</i>

        <b>Biman Bandar\n</b>
        <i>Phone: Phone: 028951281\n\n</i>

        <b>Cantonment\n</b>
        <i>Phone: Phone: 02-8712350\n\n</i>

        <b>Chawk Bazar\n</b>
        <i>Phone: Phone: 02-7313966\n\n</i>

        <b>Dhakkhin khan\n</b>
        <i>Phone: Phone: 02-8931777\n\n</i>

        <b>Dar Us Salam\n</b>
        <i>Phone: Phone: 02-8032333\n\n</i>

        <b>Demra\n</b>
        <i>Phone: Phone: 02-7501155\n\n</i>

        <b>Dhanmondi\n</b>
        <i>Phone: Phone: 02-8631941\n\n</i>

        <b>Gandaria\n</b>
        <i>Phone: Phone: 02-7453294\n\n</i>

        <b>Gulsan\n</b>
        <i>Phone: Phone: 02-9895826\n\n</i>

        <b>Hazaribag\n</b>
        <i>Phone: Phone: 02-9669900\n\n</i>

        <b>Jatrabari\n</b>
        <i>Phone: Phone: 02-7546244\n\n</i>

        <b>Kafrul</b>
        <i>Phone: Phone: 02-9001061\n\n</i>

        <b>Kalabagan\n</b>
        <i>Phone: Phone: 02-9665254\n\n</i>

        <b>Kamrangi chor\n</b>
        <i>Phone: Phone: 02-7320323\n\n</i>

        <b>Khilgoan\n</b>
        <i>Phone: Phone: 02-7219090\n\n</i>

        <b>Khilkhet\n</b>
        <i>Phone: Phone: 02-8911786\n\n</i>

        <b>Katamtoli\n</b>
        <i>Phone: Phone: 02-7547755\n\n</i>

        <b>Kotwali – Dhaka\n</b>
        <i>Phone: Phone: 02-7116255\n\n</i>

        <b>Lalbag\n</b>
        <i>Phone: Phone: 02-9660105\n\n</i>

        <b>Mirpur Model\n</b>
        <i>Phone: Phone: 02-9001000-1\n\n</i>

        <b>Mohammadpur\n</b>
        <i>Phone: Phone: 02-9119943\n\n</i>

        <b>Motijheel\n</b>
        <i>Phone: Phone: 02-9571000\n\n</i>

        <b>Mugda\n</b>
        <i>Phone: Phone: 02-7549722\n\n</i>

        <b>New Market\n</b>
        <i>Phone: Phone: 02-8631942\n\n</i>

        <b>Pallabi\n</b>
        <i>Phone: Phone: 02-9015922\n\n</i>

        <b>Paltan\n</b>
        <i>Phone: Phone: 02-9360802\n\n</i>

        <b>Ramna\n</b>
        <i>Phone: Phone: 02-9350468\n\n</i>

        <b>Rampura\n</b>
        <i>Phone: Phone: 02-7290999\n\n</i>

        <b>Rupnagar\n</b>
        <i>Phone: Phone: 02-9002177\n\n</i>

        <b>Sabuzbag\n</b>
        <i>Phone: Phone: 02-7219988\n\n</i>

        <b>Shah Ali\n</b>
        <i>Phone: Phone: 02-9002777\n\n</i>

        <b>Shahbag\n</b>
        <i>Phone: Phone: 02-9676699\n\n</i>

        <b>Shajahanpur\n</b>
        <i>Phone: Phone: 02-9360535\n\n</i>

        <b>Sutrapur\n</b>
        <i>Phone: Phone: 02-7116233\n\n</i>

        <b>Shyampur\n</b>
        <i>Phone: Phone: 02-7440691\n\n</i>

        <b>Sher E Bangla Nagar\n</b>
        <i>Phone: Phone: 02-9124154\n\n</i>

        <b>Tejgoan Industrial\n</b>
        <i>Phone: Phone: 02-9119444,9119467\n\n</i>

        <b>Tejgoan\n</b>
        <i>Phone: Phone: 02-8981247\n\n</i>

        <b>Uttara (EAST)\n</b>
        <i>Phone: Phone: 02-8914126\n\n</i>

        <b>Uttara (WEAST)\n</b>
        <i>Phone: Phone: 02-8991315\n\n</i>

        <b>Uttarkhan\n</b>
        <i>Phone: Phone: 02-8931888\n\n</i>

        <b>Vasantek\n</b>
        <i>Phone: Phone: 02-8713023\n\n</i>

        <b>Vatara\n</b>
        <i>Phone: Phone: 02-9897438\n\n</i>

        <b>Wari\n</b>
        <i>Phone: Phone: 02-9553377\n\n</i>

        <b><u>More Information:\n</u></b>
        <b>Police Headquarters\n</b>
        <i>Phone: +88-02-9564779</i>

    </string>
    <string name="MadaripurThanaContract">
        <b>Madaripur\n</b>
        <i>Phone: 01713-373585\n\n</i>

        <b>Rajoi\n</b>
        <i>Phone: 01713-373586\n\n</i>

        <b>Kalkini\n</b>
        <i>Phone: 01713-373587\n\n</i>

        <b>Sibchore\n</b>
        <i>Phone: 01713-373588\n\n</i>

    </string>
    <string name="FaridpurThanaContract">

        <b>Alfadanga\n</b>
        <i>Phone: 01713-373559\n\n</i>

        <b>Bhanga\n</b>
        <i>Phone: 01713-373564\n\n</i>

        <b>Boalmari\n</b>
        <i>Phone: 01713-373558\n\n</i>

        <b>Charbhadrasan\n</b>
        <i>Phone: 01713-373560\n\n</i>

        <b>Faridpur Sadar\n</b>
        <i>Phone: 01713-373556\n\n</i>

        <b>Madhukhali\n</b>
        <i>Phone: 01713-373557\n\n</i>

        <b>Nagar Kanda\n</b>
        <i>Phone: 01713-373561\n\n</i>

        <b>Sadarpur\n</b>
        <i>Phone: 01713-373562\n\n</i>

        <b>Saltha\n</b>
        <i>Phone: 01713-373563\n\n</i>

    </string>
    <string name="GazipurThanaContract">

        <b>Joydebpur\n</b>
        <i>Phone: 01713-373363\n\n</i>

        <b>Tongi\n</b>
        <i>Phone: 01713-373364\n\n</i>

        <b>Kaliakoria\n</b>
        <i>Phone: 01713-373365\n\n</i>

        <b>Sripur\n</b>
        <i>Phone: 01713-373366\n\n</i>

        <b>Kapasia\n</b>
        <i>Phone: 01713-373367\n\n</i>

        <b>Kaligoanj\n</b>
        <i>Phone: 01713-373368\n\n</i>

    </string>
    <string name="GopalgoanjThanaContract">

        <b>Gopalgong\n</b>
        <i>Phone: 01713-373572\n\n</i>

        <b>Maksudpur\n</b>
        <i>Phone: 01713-373573\n\n</i>

        <b>Kashiani\n</b>
        <i>Phone: 01713-373574\n\n</i>

        <b>Kotalipara\n</b>
        <i>Phone: 01713-373575\n\n</i>

        <b>Tungipara\n</b>
        <i>Phone: 01713-373576\n\n</i>

    </string>
    <string name="JamalpurThanaContract">

        <b>Jamalpur\n</b>
        <i>Phone: 01713-373538\n\n</i>

        <b>Melandoho\n</b>
        <i>Phone: 01713-373539\n\n</i>

        <b>Sorishabari\n</b>
        <i>Phone: 01713-373540\n\n</i>

        <b>Deoangong\n</b>
        <i>Phone: 01713-373541\n\n</i>

        <b>Islampur\n</b>
        <i>Phone: 01713-373542\n\n</i>

        <b>Mothergong\n</b>
        <i>Phone: 01713-373543\n\n</i>

        <b>Bakshigonj\n</b>
        <i>Phone: 01713-373544\n\n</i> \

        <b>Bahadurabad\n</b>
        <i>Phone: 01713-373545\n\n</i>

    </string>
    <string name="KishoregonjThanaContract">

        <b>Kishoreganj\n</b>
        <i>Phone: 01713-373480\n\n</i>

        <b>Karimganj\n</b>
        <i>Phone: 01713-373481\n\n</i>

        <b>Tarail\n</b>
        <i>Phone: 01713-373482\n\n</i>

        <b>Hossainpur\n</b>
        <i>Phone: 01713-373483\n\n</i>

        <b>Katiadi\n</b>
        <i>Phone: 01713-373484\n\n</i>

        <b>Bajitpur\n</b>
        <i>Phone: 01713-373485\n\n</i>

        <b>Kuliarchar\n</b>
        <i>Phone: 01713-373486\n\n</i> \

        <b>Bhairab\n</b>
        <i>Phone: 01713-373487\n\n</i>

        <b>Itna\n</b>
        <i>Phone: 01713-373488\n\n</i>

        <b>Mithamain\n</b>
        <i>Phone: 01713-373489\n\n</i>

        <b>Nikli\n</b>
        <i>Phone: 01713-373490\n\n</i>

        <b>Pakundia\n</b>
        <i>Phone: 01713-373491\n\n</i>

        <b>Astagram\n</b>
        <i>Phone: 01713-373492\n\n</i>

    </string>
    <string name="ManikThanaContract">

        <b>Manikganj\n</b>
        <i>Phone: 01713-373379\n\n</i>

        <b>Singair\n</b>
        <i>Phone: 01713-373380\n\n</i>

        <b>Shivalaya\n</b>
        <i>Phone: 01713-373381\n\n</i>

        <b>Saturia\n</b>
        <i>Phone: 01713-373382\n\n</i>

        <b>Harirampur\n</b>
        <i>Phone: 01713-373383\n\n</i>

        <b>Ghior\n</b>
        <i>Phone: 01713-373384\n\n</i>

        <b>Daulatpur\n</b>
        <i>Phone: 01713-373385\n\n</i> \

    </string>
    <string name="munshiThanaContract">

        <b>Munshiganj\n</b>
        <i>Phone: 01713-373396\n\n</i>

        <b>Tongibari\n</b>
        <i>Phone: 01713-373397\n\n</i>

        <b>Lauhojang\n</b>
        <i>Phone: 01713-373398\n\n</i>

        <b>Srinagar\n</b>
        <i>Phone: 01713-373399\n\n</i>

        <b>Shirajdikhan\n</b>
        <i>Phone: 01713-373400\n\n</i>

        <b>Gojaria\n</b>
        <i>Phone: 01713-373401\n\n</i>
    </string>
    <string name="narsingdiThanaContract">

        <b>Norshingdi\n</b>
        <i>Phone: 01713-373412\n\n</i>

        <b>Raypur\n</b>
        <i>Phone: 01713-373413\n\n</i>

        <b>Shibpur\n</b>
        <i>Phone: 01713-373414\n\n</i>

        <b>Belabo\n</b>
        <i>Phone: 01713-373415\n\n</i>

        <b>Monohordi\n</b>
        <i>Phone: 01713-373416\n\n</i>

        <b>palash\n</b>
        <i>Phone: 01713-373417\n\n</i>
    </string>
    <string name="rajbariThanaContract">

        <b>Rajbari\n</b>
        <i>Phone: 01713-373412\n\n</i>

        <b>Baliakandi\n</b>
        <i>Phone: 01713-373413\n\n</i>

        <b>Shibpur\n</b>
        <i>Phone: 01713-373414\n\n</i>

        <b>Pangsha\n</b>
        <i>Phone: 01713-373415\n\n</i>

        <b>Goalond\n</b>
        <i>Phone: 01713-373416\n\n</i>
    </string>
    <string name="shariatpurThanaContract">

        <b>Goshairhat\n</b>
        <i>Phone: 01713-373612\n\n</i>

        <b>Vedorgong\n</b>
        <i>Phone: 01713-373613\n\n</i>

        <b>Damuda\n</b>
        <i>Phone: 01713-373614\n\n</i>

        <b>Jajira\n</b>
        <i>Phone: 01713-373615\n\n</i>

        <b>Noria\n</b>
        <i>Phone: 01713-373616\n\n</i>

        <b>Palong\n</b>
        <i>Phone: 01713-373617\n\n</i>

        <b>Sokhipur\n</b>
        <i>Phone: 01713-373618\n\n</i>
    </string>
    <string name="tangailThanaContract">

        <b>Tangail\n</b>
        <i>Phone: 01713-373454\n\n</i>

        <b>Mirjapur\n</b>
        <i>Phone: 01713-373455\n\n</i>

        <b>Nagarpur\n</b>
        <i>Phone: 01713-373456\n\n</i>

        <b>sokhipur\n</b>
        <i>Phone: 01713-373457\n\n</i>

        <b>Basail\n</b>
        <i>Phone: 01713-373458\n\n</i>

        <b>Deldur\n</b>
        <i>Phone: 01713-373459\n\n</i>

        <b>Modhopur\n</b>
        <i>Phone: 01713-373460\n\n</i>

        <b>Ghatail\n</b>
        <i>Phone: 01713-373461\n\n</i>

        <b>khlihati\n</b>
        <i>Phone: 01713-373462\n\n</i>

        <b>Bhuyapur\n</b>
        <i>Phone: 01713-373463\n\n</i>

        <b>jumuna Bridge East\n</b>
        <i>Phone: 01713-373464\n\n</i>

        <b>Dhonbari\n</b>
        <i>Phone: 01713-373465\n\n</i>

        <b>Gopalpur\n</b>
        <i>Phone: 01713-373466\n\n</i>
        
    </string>
    <string name="powerButtonString">
        <b>Press power button 4 times in emergency time to get help.</b>
    </string>
    <string name="bdPoliceContact">BD Police Contact</string>
    <string name="switchButtonString"><b>Enable power button and app in background</b></string>
</resources>