<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:animateLayoutChanges="true"
    tools:context="com.example.salahuddin.humansafety.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <!--//include toolbar-->
            <include
                android:id="@+id/toolbarId"
                layout="@layout/toolbar" />
            <!--//end-->
            <LinearLayout
                android:id="@+id/linearLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/login"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="22sp"

                    />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewId1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayoutId"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />


            <RelativeLayout
                android:id="@+id/relativeLayoutId1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayoutId"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="90dp">

                <ImageView
                    android:id="@+id/passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/envelope" />

                <EditText
                    android:id="@+id/loginMailEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/passwordIcon"
                    android:background="@color/editTextBG"
                    android:hint="Enter Your E-mail"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutId2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutId1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/passwordIconId"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/phone" />

                <EditText
                    android:id="@+id/loginEditTextPasswordId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/passwordIconId"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/passwordIconId"
                    android:background="@color/editTextBG"
                    android:hint="Enter Your Password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />


            </RelativeLayout>

            <Button
                android:id="@+id/mainLoginButtonId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/relativeLayoutId2"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"

                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/relativeLayoutId2"
                android:layout_marginTop="110dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >

                        <TextView
                            android:id="@+id/dontaccountId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#550d61"
                            android:text="@string/don_account"
                            android:layout_marginRight="100dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="30dp"
                            android:textSize="14sp"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/down_arrow"
                            android:layout_below="@id/dontaccountId"
                            android:layout_marginLeft="30dp"
                            />

                <Button
                    android:id="@+id/signUpfromLoginPageButtonId"
                    android:layout_width="125dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="114dp"
                    android:background="@drawable/button1"
                    android:fontFamily="sans-serif-medium"
                    android:shadowColor="#A14A9B"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="12"
                    android:text="@string/signup_now"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/forgetPasswordButtonId"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="114dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button1"
                    android:fontFamily="sans-serif-medium"
                    android:shadowColor="#A14A9B"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="12"
                    android:text="@string/forget_password"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
</ScrollView>